Debug CORS error.

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,18 @@
 # Enable rewrite engine
 RewriteEngine On
 
-# Redirect all requests to index.php if not a real file or folder
+# Always allow CORS headers, even on errors
+<IfModule mod_headers.c>
+    Header always set Access-Control-Allow-Origin "https://blogging-application-three.vercel.app"
+    Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+    Header always set Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Requested-With"
+</IfModule>
+
+# Handle preflight OPTIONS requests
+RewriteCond %{REQUEST_METHOD} OPTIONS
+RewriteRule ^(.*)$ $1 [R=200,L]
+
+# Let index.php handle all other requests if not a file/folder
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [QSA,L]
